Implemented register + makecall with success and error callbacks

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -24,7 +24,7 @@
 				name="pwd" minlength="4" placeholder="Password" required>
 			<div id="errorMsg"></div>
 			<div id="successMsg"></div>
-			<input type="button" id="login" value="Login"> <br>
+			<input type="button" id="login" value="Login" autofocus> <br>
 		</form>
 		<a class="link" href="register.html">Register</a>
 	</div>
