--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="stylesheet" th:href="@{/css/style.css}">
+<link rel="stylesheet" href="css/style.css">
+<script src="js/utils.js" charset="utf-8" defer></script>
+<script src="js/register.js" charset="utf-8" defer></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
@@ -16,7 +18,7 @@
 	<div class="loginContainer">
 		<div class="title">Image Gallery</div>
 		<div class="sub-title">Register</div>
-		<form action="Register" method="POST">
+		<form action="#">
 			<input type="text" name="username" minlength="4" maxlength="50"
 				placeholder="Username" required> <br> <input
 				type="email" name="email" placeholder="Email" required> <br>
@@ -24,12 +26,11 @@
 				placeholder="Password" required><br> <input
 				type="password" name="pwd2" minlength="4"
 				placeholder="Confirm Password" required><br>
-			<div class="errorMsg" th:if="${errorMsg!=null}" th:text="${errorMsg}"></div>
-			<div class="successMsg" th:if="${successMsg!=null}"
-				th:text="${successMsg}"></div>
-			<input type="submit" value="Register"> <br> <a
-				class="link" href="Login">Login</a>
+			<div id="errorMsg"></div>
+			<div id="successMsg"></div>
+			<input type="button" id="register" value="Register"> <br>
 		</form>
+		<a class="link" href="login.html">Login</a>
 	</div>
 </body>
 </html>
