--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<link rel="stylesheet" th:href="@{/css/style.css}">
-<link rel="stylesheet" th:href="@{/css/header.css}">
-<link rel="stylesheet" th:href="@{/css/home.css}">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/header.css">
+<link rel="stylesheet" href="css/home.css">
+<script src="js/utils.js" charset="utf-8" defer></script>
+<script src="js/imageGallery.js" charset="utf-8" defer></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
@@ -17,34 +19,32 @@
 <body>
 	<div class="header">
 		<div class="headerLeft">
-			<a href="Home">Image Gallery</a> <a th:href="@{/CreateAlbum}">Create
-				Album</a> <a th:href="@{/UploadImage}">Upload Image</a>
+			<a href="Home">Image Gallery</a> <a href="CreateAlbum">Create
+				Album</a> <a href="UploadImage">Upload Image</a>
 		</div>
 		<div class="headerRight">
-			<span th:text="${session.user.username}"></span> <a
-				th:href="@{/Logout}">Logout</a>
+			<span id="username"></span> <a href="Logout">Logout</a>
 		</div>
 	</div>
+	<div id="errorMsg"></div>
+	<div id="successMsg"></div>
 	<div class="content">
-		<div class="errorMsg" th:if="${errorMsg!=null}" th:text="${errorMsg}"></div>
-		<div class="successMsg" th:if="${successMsg!=null}"
-			th:text="${successMsg}"></div>
-		<div class="section">
+		<div class="section" id="yourAlbums">
 			<div class="sectionTItle">Your Albums</div>
-			<div th:each="album : ${myAlbumList}" class="albumTab">
-				<a th:href="@{/AlbumPage(album=${album.getId()}, page=0)}">
-					<div class="albumTitle" th:text="${album.getTitle()}"></div>
-					<div class="albumDate" th:text="${album.getDate()}"></div>
+			<div each="album : ${myAlbumList}" class="albumTab">
+				<a href="@{/AlbumPage(album=${album.getId()}, page=0)}">
+					<div class="albumTitle"></div>
+					<div class="albumDate"></div>
 				</a>
 			</div>
 
 		</div>
-		<div class="section">
+		<div class="section" id="otherAlbums">
 			<div class="sectionTItle">Other People's Albums</div>
-			<div th:each="album : ${otherAlbumList}" class="albumTab">
-				<a th:href="@{/AlbumPage(album=${album.getId()}, page=0)}">
-					<div class="albumTitle" th:text="${album.getTitle()}"></div>
-					<div class="albumDate" th:text="${album.getDate()}"></div>
+			<div each="album : ${otherAlbumList}" class="albumTab">
+				<a href="@{/AlbumPage(album=${album.getId()}, page=0)}">
+					<div class="albumTitle"></div>
+					<div class="albumDate"></div>
 				</a>
 			</div>
 
