Created modal, way better albumDetails, css fix, home button event

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -19,11 +19,11 @@
 <body>
 	<div class="header">
 		<div class="headerLeft">
-			<a href="Home">Image Gallery</a> <a href="CreateAlbum">Create
-				Album</a> <a href="UploadImage">Upload Image</a>
+			<span id="Home">Image Gallery</span> <span id="CreateAlbum">Create
+				Album</span> <span id="UploadImage">Upload Image</span>
 		</div>
 		<div class="headerRight">
-			<span id="username"></span> <a href="Logout">Logout</a>
+			<span id="Username"></span> <a id="Logout" href="Logout">Logout</a>
 		</div>
 	</div>
 	<div id="errorMsg"></div>
