Maybe fixed redirect, change order resilient to delete album and not contiguous order values, fixed comments not flushed after changing image and scroll to modal top after reopening, removed upload image (ria), rollback in change order if transaction fails

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -20,7 +20,7 @@
 	<div class="header">
 		<div class="headerLeft">
 			<span id="Home">Image Gallery</span> <span id="CreateAlbum">Create
-				Album</span> <span id="UploadImage">Upload Image</span>
+				Album</span>
 		</div>
 		<div class="headerRight">
 			<span id="Username"></span> <a id="Logout" href="Logout">Logout</a>
